# gdelt-medallion-lakehouse-gcp

./: .gitignore  README.md  gdelt_schema_guide.md  pyproject.toml  roadmap.md
dags/: gdel_gcp_dataproc_pipeline.py  gdel_local_pipeline.py
docker/: Dockerfile  docker-compose.yaml
notebooks/: eda_gdelt.ipynb
scripts/: download_sample.py  pyspark_eda.py  pyspark_gcp.py
src/de/: __init__.py
terraform/: main.tf  variables.tf
