[project]
name = "de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "theanh9911", email = "nguyentrantheanh27@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.uv.workspace]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
